Fixing ridiculouly small type on mobile

--- a/public/css/main.css
+++ b/public/css/main.css
@@ -611,7 +611,7 @@ ol {
 .hp_cardTitle {
     font-family: "NotoSans", sans-serif;
     font-weight: 600;
-    font-size: 0.75em;
+    font-size: 0.875em;
     line-height: 1.5em;
     letter-spacing: 0.09px;
     color: #000;
